--- a/configs/cityscapes/e2e_mask_rcnn_R_50_FPN_1x_cocostyle.yaml
+++ b/configs/cityscapes/e2e_mask_rcnn_R_50_FPN_1x_cocostyle.yaml
@@ -1,6 +1,6 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
-  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-50"
+  WEIGHT: "/data/cvfs/ah2029/saved_models/maskrcnn_coco_fpn50/mask_rcnn_R_50_FPN_cityscapes.pth"
   BACKBONE:
     CONV_BODY: "R-50-FPN"
   RESNETS:
@@ -37,6 +37,12 @@ DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   BASE_LR: 0.01
+  IMGS_PER_BATCH: 1
   WEIGHT_DECAY: 0.0001
-  STEPS: (18000,)
-  MAX_ITER: 24000
+  STEPS: (3000,)
+  MAX_ITER: 4000
+INPUT:
+  MIN_SIZE_TRAIN: (800, 832, 864, 896, 928, 960, 992, 1024, 1024)
+  MAX_SIZE_TRAIN: 2048
+  MIN_SIZE_TEST: 1024
+  MAX_SIZE_TEST: 2048
