--- a/configs/cityscapes/e2e_mask_rcnn_R_50_FPN_1x_cocostyle.yaml
+++ b/configs/cityscapes/e2e_mask_rcnn_R_50_FPN_1x_cocostyle.yaml
@@ -37,7 +37,7 @@ DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   BASE_LR: 0.01
-  IMGS_PER_BATCH: 1
+  IMS_PER_BATCH: 8
   WEIGHT_DECAY: 0.0001
   STEPS: (3000,)
   MAX_ITER: 4000
@@ -46,3 +46,4 @@ INPUT:
   MAX_SIZE_TRAIN: 2048
   MIN_SIZE_TEST: 1024
   MAX_SIZE_TEST: 2048
+OUTPUT_DIR: /data/cvfs/ah2029/experiments/cityscapes/maskrcnn
